force-app/main/default/objects/Course_Enrollment__c/Course_Enrollment__c.object-meta.xml
<CustomObject>
    <description>All courses that a learner has enrolled in at any time</description>
    <label>Course Enrollment</label>
    <nameField>
        <displayFormat>CE-{000}</displayFormat>
        <label>Course Enrollment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>