force-app/main/default/objects/Course_Enrollment__c/fields/Activities_Completed__c.field-meta.xml
<CustomField>
    <fullName>Activities_Completed__c</fullName>
    <label>Activities Completed</label>
    <summaryForeignKey>Course_Activity_Completion__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>