force-app/main/default/objects/Course_Enrollment__c/fields/Coach_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coach_Notes__c</fullName>
    <label>Coach Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>