force-app/main/default/objects/Course_Enrollment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The learner</description>
    <inlineHelpText>The learner</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>