force-app/main/default/objects/Course_Enrollment__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Full name of the learner</description>
    <formula>Program_Engagement__r.pmdm__Contact__r.FirstName + &quot; &quot; +  Program_Engagement__r.pmdm__Contact__r.LastName</formula>
    <inlineHelpText>Full name of the learner</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>