force-app/main/default/objects/Course_Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifier of the course in which user is enrolled</description>
    <inlineHelpText>Identifier of the course in which user is enrolled</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Learner_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>