force-app/main/default/objects/Course_Enrollment__c/fields/Current_Module__c.field-meta.xml
<CustomField>
    <fullName>Current_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Module</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>