force-app/main/default/objects/Course_Enrollment__c/fields/External_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Enrollment_Id__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <description>GC studentId dedup key</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier of the student id for a specific course</inlineHelpText>
    <label>External Enrollment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>