force-app/main/default/objects/Course_Enrollment__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>