force-app/main/default/objects/Course_Enrollment__c/fields/LMS_Platform__c.field-meta.xml
<CustomField>
    <fullName>LMS_Platform__c</fullName>
    <label>LMS Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Google Classroom</fullName>
            </value>
            <value>
                <fullName>Pluralsight</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>