force-app/main/default/objects/Course_Enrollment__c/fields/Penny_Current_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Penny_Current_Blocker__c</fullName>
    <label>Penny Current Blocker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>