force-app/main/default/objects/Course_Enrollment__c/fields/Penny_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Penny_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Penny Enabled</label>
    <type>Checkbox</type>
</CustomField>