force-app/main/default/objects/Course_Enrollment__c/fields/Penny_Flag__c.field-meta.xml
<CustomField>
    <fullName>Penny_Flag__c</fullName>
    <label>Penny Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>