force-app/main/default/objects/Course_Enrollment__c/fields/Penny_Flag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Penny_Flag_Reason__c</fullName>
    <label>Penny Flag Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>