force-app/main/default/objects/Course_Enrollment__c/fields/Penny_Recent_Win__c.field-meta.xml
<CustomField>
    <fullName>Penny_Recent_Win__c</fullName>
    <label>Penny Recent Win</label>
    <length>255</length>
    <type>Text</type>
</CustomField>