force-app/main/default/objects/Course_Enrollment__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Learner_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>