force-app/main/default/objects/Course_Enrollment__c/fields/Progress_Pct__c.field-meta.xml
<CustomField>
    <fullName>Progress_Pct__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Computed after each completion sync</description>
    <inlineHelpText>computed after each completion sync</inlineHelpText>
    <label>Progress Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>