force-app/main/default/objects/Course_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>LMS_Platform__c</columns>
    <columns>Program_Engagement__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>